Bumping version of deps and some more tidying up